fix image stretch on some chrome browsers

--- a/src/testing.css
+++ b/src/testing.css
@@ -55,5 +55,6 @@ hr {
 
 img {
     width:300px;
+    align-self: center;
     height: auto;
 }
